Stain vector updates
Do not overwrite the last workflow step when setting stain vectors multiple times in a row. This is to address a recent workshop confusion in which it wasn't possible to restore previous values.
Also update the default stain names when using 'Estimate stain vectors'.